# TensorRT-load

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
include/: configs.h
wrapper/: CMakeLists.txt
wrapper/include/: TrtNet.h
wrapper/src/: TrtNet.cpp
